// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form checkbox component Should render correctly 1`] = `
<FormGroup
  bsClass="form-group"
  className="field-group"
  validationState={null}
>
  <Col
    bsClass="col"
    componentClass="div"
  >
    <Checkbox
      bsClass="checkbox"
      disabled={false}
      inline={false}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      title=""
      value=""
    >
      foo
    </Checkbox>
  </Col>
</FormGroup>
`;

exports[`Final form checkbox component Should render with error message 1`] = `
<FormGroup
  bsClass="form-group"
  className="field-group"
  validationState="error"
>
  <Col
    bsClass="col"
    componentClass="div"
  >
    <Checkbox
      bsClass="checkbox"
      disabled={false}
      inline={false}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      title=""
      value=""
    >
      foo
    </Checkbox>
  </Col>
</FormGroup>
`;
